--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -7,4 +7,8 @@
     )
     [center-end] minmax(2rem, 1fr) [full-end];
   grid-template-rows: 70vh 30vh repeat(2, min-content) 80rem 6rem;
+
+  @media only screen and (max-width: $bp-small) {
+    grid-template-rows: 100vh repeat(3, min-content) 80rem 6rem;
+  }
 }
