--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -36,6 +36,10 @@
   padding: 5rem 2rem;
   margin: 20rem 0;
 
+  @media only screen and (max-width: $bp-smallest) {
+    margin: 5rem 0;
+  }
+
   &__projects {
     display: grid;
     grid-column: center-start / center-end;
